--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>JavaScript Assignment</h1>
     <ul>
         <li><a href="assignment.html">Assignment </a></li>
-        
+        <li><a href="createuser.html">createuser </a></li>
     </ul>
 </body>
 </html>
