--- a/createuser.html
+++ b/createuser.html
@@ -1,70 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>User Management Dashboard</title>
 
-<!-- Bootstrap CSS -->
+<!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
-/* Small, focused styling so the page looks neat */
 body { padding: 2rem; background: #f8f9fa; }
-.card { max-width: 900px; margin: 0 auto; }
-.table-wrap { max-height: 420px; overflow: auto; }
-.required::after { content: " *"; color: #d00; }
+.card { max-width: 900px; margin: auto; }
+.table-wrap { max-height: 400px; overflow: auto; }
+
+.required::after { content: " *"; color: red; }
+
+/* Autocomplete */
+.autocomplete-box {
+  border: 1px solid #ccc;
+  background: white;
+  position: absolute;
+  width: 100%;
+  z-index: 2000;
+  max-height: 150px;
+  overflow-y: auto;
+  display: none;
+}
+.autocomplete-item {
+  padding: 8px;
+  cursor: pointer;
+}
+.autocomplete-item:hover {
+  background: #e9ecef;
+}
 </style>
 </head>
 <body>
+
 <div class="card shadow-sm">
-<div class="card-body">
-<h3 class="card-title mb-3">User Management Dashboard</h3>
+  <div class="card-body">
+    <h3 class="mb-3">User List</h3>
 
-<!-- Users table -->
-<div class="table-wrap mb-3">
-<table class="table table-striped table-hover" id="usersTable">
-<thead class="table-light sticky-top">
-<tr>
-<th scope="col">#</th>
-<th scope="col">Username</th>
-<th scope="col">Fullname</th>
-<th scope="col">Email</th>
-</tr>
-</thead>
-<tbody>
-<!-- Filled by JS -->
-</tbody>
-</table>
-</div>
+    <div class="table-wrap mb-3">
+      <table class="table table-striped" id="usersTable">
+        <thead class="table-light sticky-top">
+          <tr>
+            <th>#</th>
+            <th>Username</th>
+            <th>Fullname</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
 
-<!-- Toggle button for modal -->
-<div class="d-flex justify-content-end">
-<button id="toggleNewUser" class="btn btn-primary" type="button">Add New User</button>
-</div>
-</div>
+    <button class="btn btn-primary" id="addUserBtn">Add User</button>
+  </div>
 </div>
 
-<!-- New User Modal -->
-<div class="modal fade" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
-<div class="modal-dialog modal-dialog-centered">
-<div class="modal-content">
-<form id="newUserForm">
-<div class="modal-header">
-<h5 class="modal-title" id="userModalLabel">Create New User</h5>
-<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+<!-- Modal -->
+<div class="modal fade" id="userModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <form id="newUserForm">
+        <div class="modal-header">
+          <h5 class="modal-title">New User</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+
+        <div class="modal-body">
+
+          <!-- Username -->
+          <div class="mb-3 position-relative">
+            <label class="required">Username</label>
+            <input type="text" id="username" class="form-control" required>
+            <div id="suggestUsername" class="autocomplete-box"></div>
+          </div>
+
+          <!-- Fullname -->
+          <div class="mb-3 position-relative">
+            <label class="required">Fullname</label>
+            <input type="text" id="fullname" class="form-control" required>
+            <div id="suggestFullname" class="autocomplete-box"></div>
+          </div>
+
+          <!-- Email -->
+          <div class="mb-3 position-relative">
+            <label class="required">Email</label>
+            <input type="email" id="email" class="form-control" required>
+            <div id="suggestEmail" class="autocomplete-box"></div>
+          </div>
+
+        </div>
+
+        <div class="modal-footer">
+          <button class="btn btn-success" type="submit">Add User</button>
+        </div>
+
+      </form>
+    </div>
+  </div>
 </div>
-<div class="modal-body">
-<div class="mb-3">
-<label for="username" class="form-label required">Username</label>
-<input type="text" class="form-control" id="username" name="username" required minlength="2" />
-</div>
-<div class="mb-3">
-<label for="fullname" class="form-label required">Fullname</label>
-<input type="text" class="form-control" id="fullname" name="fullname" required />
-</div>
-<div class="mb-3">
-<label for="email" class="form-label required">Email</label>
-<input type="email" class="form-control" id="email" name="email" required />
-</div>
+
+<!-- Bootstrap + jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+// =================== AUTOCOMPLETE SUGGESTION DATA ===================
+const suggestionData = {
+  username: ["van123", "vanessa", "alex01", "anna99", "tester", "cooluser", "supervan"],
+  fullname: ["Van Thant", "Anna Lee", "Tommy Chan", "Mary Jane", "Lucas White", "Nina Brown"],
+  email: ["van@gmail.com", "anna@hotmail.com", "user@test.com", "demo@example.com", "alex@mail.com"]
+};
+
+// =================== AUTOCOMPLETE FUNCTION ===================
+function setupAutocomplete(inputId, boxId, dataList) {
+  const input = document.getElementById(inputId);
+  const box = document.getElementById(boxId);
+
+  input.addEventListener("input", () => {
+    const text = input.value.toLowerCase();
+    box.innerHTML = "";
+
+    if (!text) {
+      box.style.display = "none";
+      return;
+    }
+
+    const filtered = dataList.filter(item =>
+      item.toLowerCase().includes(text)
+    );
+
+    if (filtered.length === 0) {
+      box.style.display = "none";
+      return;
+    }
+
+    filtered.forEach(item => {
+      const div = document.createElement("div");
+      div.textContent = item;
+      div.classList.add("autocomplete-item");
+      div.onclick = () => {
+        input.value = item;
+        box.style.display = "none";
+      };
+      box.appendChild(div);
+    });
+
+    box.style.display = "block";
+  });
+
+  document.addEventListener("click", (e) => {
+    if (!box.contains(e.target) && !input.contains(e.target)) {
+      box.style.display = "none";
+    }
+  });
+}
+
+// Activate autocomplete for 3 fields
+setupAutocomplete("username", "suggestUsername", suggestionData.username);
+setupAutocomplete("fullname", "suggestFullname", suggestionData.fullname);
+setupAutocomplete("email", "suggestEmail", suggestionData.email);
+
+// =================== ADD USER MODAL ===================
+const modal = new bootstrap.Modal(document.getElementById("userModal"));
+document.getElementById("addUserBtn").onclick = () => modal.show();
+
+// =================== HANDLE FORM SUBMIT ===================
+document.getElementById("newUserForm").addEventListener("submit", function(e) {
+  e.preventDefault();
+
+  let username = document.getElementById("username").value.trim();
+  let fullname = document.getElementById("fullname").value.trim();
+  let email = document.getElementById("email").value.trim();
+
+  if (!username || !fullname || !email) return;
+
+  let table = document.querySelector("#usersTable tbody");
+
+  let row = `
+    <tr>
+      <td>${table.rows.length + 1}</td>
+      <td>${username}</td>
+      <td>${fullname}</td>
+      <td>${email}</td>
+    </tr>
+  `;
+
+  table.insertAdjacentHTML("beforeend", row);
+
+  this.reset();
+  modal.hide();
+});
+</script>
+
+</body>
 </html>
