--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>JavaScript Assignment</title>
 </head>
 <body>
-    <h1>JavaScript Assignment</h1>
+    <h1>jquery Assignment</h1>
     <ul>
         <li><a href="assignment.html">Assignment </a></li>
         <li><a href="createuser.html">createuser </a></li>
